--- a/InviteMate/fonts.css
+++ b/InviteMate/fonts.css
@@ -5,7 +5,7 @@
   font-weight: 400;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-latin-400.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-latin-400.woff2") format("woff2");
   unicode-range: U+0020-007F;
 }
 
@@ -15,7 +15,7 @@
   font-weight: 500;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-latin-500.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-latin-500.woff2") format("woff2");
   unicode-range: U+0020-007F;
 }
 
@@ -25,7 +25,7 @@
   font-weight: 600;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-latin-600.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-latin-600.woff2") format("woff2");
   unicode-range: U+0020-007F;
 }
 
@@ -36,7 +36,7 @@
   font-weight: 400;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-lat1-400.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-lat1-400.woff2") format("woff2");
   unicode-range: U+00A0-00FF;
 }
 
@@ -46,7 +46,7 @@
   font-weight: 500;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-lat1-500.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-lat1-500.woff2") format("woff2");
   unicode-range: U+00A0-00FF;
 }
 
@@ -56,7 +56,7 @@
   font-weight: 600;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-lat1-600.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-lat1-600.woff2") format("woff2");
   unicode-range: U+00A0-00FF;
 }
 
@@ -67,7 +67,7 @@
   font-weight: 400;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-latxa-400.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-latxa-400.woff2") format("woff2");
   unicode-range: U+0100-017F;
 }
 
@@ -77,7 +77,7 @@
   font-weight: 500;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-latxa-500.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-latxa-500.woff2") format("woff2");
   unicode-range: U+0100-017F;
 }
 
@@ -87,7 +87,7 @@
   font-weight: 600;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-latxa-600.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-latxa-600.woff2") format("woff2");
   unicode-range: U+0100-017F;
 }
 
@@ -98,7 +98,7 @@
   font-weight: 400;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-punct-400.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-punct-400.woff2") format("woff2");
   unicode-range: U+2000-206F;
 }
 
@@ -108,7 +108,7 @@
   font-weight: 500;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-punct-500.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-punct-500.woff2") format("woff2");
   unicode-range: U+2000-206F;
 }
 
@@ -118,7 +118,7 @@
   font-weight: 600;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-punct-600.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-punct-600.woff2") format("woff2");
   unicode-range: U+2000-206F;
 }
 
@@ -129,7 +129,7 @@
   font-weight: 400;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-arabic-400.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-arabic-400.woff2") format("woff2");
   unicode-range: U+0600-06FF;
 }
 
@@ -139,7 +139,7 @@
   font-weight: 500;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-arabic-500.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-arabic-500.woff2") format("woff2");
   unicode-range: U+0600-06FF;
 }
 
@@ -149,7 +149,7 @@
   font-weight: 600;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-arabic-600.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-arabic-600.woff2") format("woff2");
   unicode-range: U+0600-06FF;
 }
 
@@ -160,7 +160,7 @@
   font-weight: 400;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-arabica-400.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-arabica-400.woff2") format("woff2");
   unicode-range: U+FB50-FDFF;
 }
 
@@ -170,7 +170,7 @@
   font-weight: 500;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-arabica-500.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-arabica-500.woff2") format("woff2");
   unicode-range: U+FB50-FDFF;
 }
 
@@ -180,7 +180,7 @@
   font-weight: 600;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-arabica-600.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-arabica-600.woff2") format("woff2");
   unicode-range: U+FB50-FDFF;
 }
 
@@ -191,7 +191,7 @@
   font-weight: 400;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-arabicb-400.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-arabicb-400.woff2") format("woff2");
   unicode-range: U+FE70-FEFF;
 }
 
@@ -201,7 +201,7 @@
   font-weight: 500;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-arabicb-500.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-arabicb-500.woff2") format("woff2");
   unicode-range: U+FE70-FEFF;
 }
 
@@ -211,6 +211,6 @@
   font-weight: 600;
   font-display: swap;
   font-stretch: 100%;
-  src: url("/fonts/noto-sans-arabicb-600.woff2") format("woff2");
+  src: url("https://github.com/Alisalhim/static/raw/refs/heads/main/InviteMate/fonts/noto-sans-arabicb-600.woff2") format("woff2");
   unicode-range: U+FE70-FEFF;
 }
